web-services/gnntracking-server-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gnntracking-server-dep 
  labels:
    run: gnntrackingserver
spec:
  replicas: 1
  selector:
    matchLabels:
      run: gnntrackingserver
  template:
    metadata: 
      labels:
        run: gnntrackingserver
    spec:
      containers:
      - name: gnntrackingserver
        image: python:3 
        resources:
           limits:
             memory: 500Mi
             cpu: "1"
           requests:
             memory: 1Mi
             cpu: 10m
        workingDir: /gnntrackingvol
        volumeMounts:
        - mountPath: /gnntrackingvol
          name: gnntrackingvol
        command: ["python", "-m", "http.server"] 
      volumes:
      - name: gnntrackingvol
        persistentVolumeClaim:
          claimName: gnntrackingvol
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/region
                operator: In
                values:
                - us-west
