web-services/mdsml-server-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdsml-server-dep 
  labels:
    run: mdsmlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mdsmlserver
  template:
    metadata: 
      labels:
        run: mdsmlserver
    spec:
      containers:
      - name: mdsmlserver
        image: python:3 
        resources:
           limits:
             memory: 500Mi
             cpu: "1"
           requests:
             memory: 1Mi
             cpu: 10m
        workingDir: /mdsmlvol
        volumeMounts:
        - mountPath: /mdsmlvol
          name: mdsmlvol
        command: ["python", "-m", "http.server"] 
      volumes:
      - name: mdsmlvol
        persistentVolumeClaim:
          claimName: mdsmlvol
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/region
                operator: In
                values:
                - us-west
