web-services/gnntracking-expose.yml
#letting the pod expose itself on port 8000
apiVersion: v1
kind: Service
metadata:
  labels:
    run: gnntrackingserver
  name: gnntrackingexpose
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: gnntrackingserver
  type: ClusterIP
