web-services/mdsml-expose.yml
#letting the pod expose itself on port 8000
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mdsmlserver
  name: mdsmlexpose
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: mdsmlserver
  type: ClusterIP
