web-services/mdsml-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: mdsmlingress
spec:
  rules:
  - host: mdsml.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: mdsmlexpose
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - mdsml.nrp-nautilus.io
